<resources>
    <string name="app_name">Homework1</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="add_task">Add task</string>
    <string name="defaultSurname">Surname</string>
    <string name="defaultName">Name</string>
    <string-array name="sounds">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        <item>Sound 4</item>
        <item>Sound 5</item>
        <item>Sound 6</item>
    </string-array>
    <string name="title_activity_new_entry">new_entry</string>
    <string name="birthday">Birthday (dd-mm-yyyy)</string>
    <string name="phone">Phone (no prefixes)</string>
    <string name="back_message">ADD ENTRY CANCELLED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Do you want to delete this entry?</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="delete_dialog_tag">DELETE ENTRY</string>
    <string name="title_activity_task_info">TaskInfoActivity</string>
</resources>
